--- a/css/styles.css
+++ b/css/styles.css
@@ -9,7 +9,7 @@
   --secondary-text-color: #757575;
   --accent-color: #2196f3;
   --primary-white-color: #ffffff;
-  --transparent-white-color: rgba(255, 255, 255, 0, 6);
+  --transparent-white-color: rgba(255, 255, 255, 0.6);
 }
 
 h1,
@@ -30,8 +30,10 @@ ol {
 }
 img {
   display: block;
+  max-width: 100%;
+  height: auto;
 }
- .list {
+.list {
   list-style: none;
 }
 
@@ -49,13 +51,12 @@ body {
   padding-left: 15px;
   padding-right: 15px;
   margin: 0 auto;
-  outline: 2px solid teal;
 }
 
 .section {
-     padding-top: 94px;
-     padding-bottom: 94px;
- }
+  padding-top: 94px;
+  padding-bottom: 94px;
+}
 
 /* =======COMPONENTS========== */
 /* logo */
@@ -77,18 +78,27 @@ body {
 }
 
 /* site-nav */
-.site-nav .link {
+.link {
   color: var(--primary-text-color);
   font-weight: 500;
   font-size: 14px;
   line-height: 1.14;
   letter-spacing: 0.02em;
   text-decoration: none;
+  display: block;
+  text-align: center;
+  padding-top: 32px;
+  padding-bottom: 32px;
 }
+
 .site-nav .link:hover,
 .site-nav .link:focus {
   color: var(--accent-color);
 }
+.menu-list .link.current{
+  color: var(--accent-color);
+}
+
 .link-contacts {
   display: block;
   color: var(--secondary-text-color);
@@ -102,26 +112,24 @@ body {
 .link-contacts:focus {
   color: var(--accent-color);
 }
+.link-current{
+  color: var(--accent-color);
+}
+
 /* header */
 .site-nav {
-    display: flex;
-    justify-content: flex-start;
-    align-items: center;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
 }
 
 /* Hero */
 .hero {
   background-color: #2f303a;
-  max-width: 1600px;
-  height: 600px;
   margin: 0 auto;
   padding-top: 200px;
-  background-image: linear-gradient( to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), 
-  url('../images/hero/hero.jpg');
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: cover;
-  }
+  padding-bottom: 200px;
+}
 
 .hero-title {
   color: var(--primary-white-color);
@@ -158,50 +166,50 @@ body {
 }
 /* ===advantages studio */
 
-/* .container-advantages{
-    height: 101px;
-} */
-.advantages-list{
-    display: flex;
+.section-advantages{
+  padding-bottom: 0;
 }
-.advantages-item{
-    margin-right: 30px;
+
+.advantages-list {
+  display: flex;
 }
-.advantages-item::before {
-  display: block;
-  content: "";
+.advantages-item {
+  width: 270px;
+}
+.advantages-item:not(:last-child) {
+  margin-right: 30px;
+}
+.icon-wrapper{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 270px;
   height: 120px;
   background-color: #F5F4FA;
-  background-repeat: no-repeat;
-  background-position: center;
   border-radius: 4px;
+  margin-bottom: 30px;
 }
-.advantages-icon-antenna::before {
-  background-image: url(../images/icon.advantages/antenna.svg);
+.icon{
+width: 70px;
+height: 70px;
 }
-.advantages-icon-clock::before  {
-background-image: url(../images/icon.advantages/clock.svg);
-}
-.advantages-icon-diagram::before {
-background-image: url(../images/icon.advantages/diagram.svg);
-}
-.advantages-icon-astronaut::before {
-background-image: url(../images/icon.advantages/astronaut.svg);
-}
-
-
-/* ========Works============= */
+/* Works */
 .works-list {
-    display: flex;
-    justify-content: space-between;
+  display: flex;
 }
 /* employee */
 .employee-list {
-    display: flex;
-    justify-content: space-between;
-    text-align: center;
+  display: flex;
+  text-align: center;
 }
-
+.employee-list-items {
+  width: 270px;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 0px 0px 4px 4px;
+}
+.employee-list-items:not(:last-child) {
+  margin-right: 30px;
+}
 
 /* Section work studio */
 .section-title {
@@ -218,23 +226,29 @@ background-image: url(../images/icon.advantages/astronaut.svg);
   font-size: 14px;
   line-height: 1.14;
   text-transform: uppercase;
-  margin-top: 30px;
+  margin-top: 0;
   margin-bottom: 10px;
 }
 .visually-hidden {
-    position: absolute;
-    width: 1px;
-    height: 1px;
-    margin: -1px;
-    border: 0;
-    padding: 0;
-    white-space: nowrap;
-    clip-path: inset(100%);
-    clip: rect(0 0 0 0);
-    overflow: hidden;
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
 }
 .section-text {
   font-size: 14px;
+}
+.works-list-items {
+  width: 370px;
+}
+.works-list-items:not(:last-child) {
+  margin-right: 30px;
 }
 
 /* team of studio */
@@ -243,48 +257,54 @@ background-image: url(../images/icon.advantages/astronaut.svg);
   font-weight: 500;
   font-size: 16px;
   line-height: 1.19;
-  margin-top: 30px;
   margin-bottom: 10px;
 }
 .position-employee {
   font-size: 16px;
   line-height: 1.19;
 }
+.employee-card {
+  padding: 30px;
+}
+
+.section-employee {
+  background-color: #f5f4fa;
+}
 
 /* Footer */
 .footer {
-    background-color: #2f303a;
-    width: 1600px;
-    height: 252px;
-    margin: 0 auto;
-    padding-top: 60px;
-    padding-bottom: 60px;
+  background-color: #2f303a;
+  margin: 0logo-footer auto;
+  padding-top: 60px;
+  padding-bottom: 60px;
 }
 .footer .color-studio {
   color: #ffffff;
 }
-.addres-footer {
-    margin-top: 20px;
-}
+
 .address {
   color: var(--primary-white-color);
   font-family: Roboto;
   font-style: normal;
   font-weight: normal;
   font-size: 14px;
-  margin-bottom: 9px;
+  margin-top: 20px;
 }
-.list-link-footer{
-    color: var(--transparent-white-color);
-    font-size: 14px;
-    font-style: normal;
-}
-.link-footer {
+
+.list-link-footer {
   color: var(--transparent-white-color);
   font-size: 14px;
+  font-style: normal;
+  margin-top: 9px;
+}
+.items-link-footer:not(:last-child){
+  margin-bottom: 9px;
+}
+
+.link-footer {
+  color: var(--transparent-white-color);
   text-decoration: none;
   display: block;
-  margin-bottom: 9px;
 }
 .link-footer:focus,
 .link-footer:hover {
@@ -292,50 +312,52 @@ background-image: url(../images/icon.advantages/astronaut.svg);
 }
 
 .container-footer {
-    width: 1200px;
-    margin: 0 auto;
-    padding-left: 15px;
-    padding-right: 15px;
+  width: 1200px;
+  margin: 0 auto;
+  padding-left: 15px;
+  padding-right: 15px;
 }
 /* ======HEADER============= */
 .header {
-    border-bottom: 1px solid #ECECEC;
-    margin: 0 auto;
-    max-width: 1600px;
+  border-bottom: 1px solid #ececec;
+  margin: 0 auto;
 }
-.header-container{
-    height: 80px;
-    display: flex;
-    justify-content: space-around;
-    align-items: center
+.header-container {
+  display: flex;
+  align-items: center;
 }
-.menu-list{
-display: flex;
-justify-content: space-between;
+.menu-list {
+  display: flex;
+  justify-content: space-between;
 }
-.nav-link {
-margin-right: 50px;
+
+.nav-link:not(:last-child){
+  margin-right: 50px;
 }
 
 .contacts-list {
   display: flex;
   justify-content: flex-end;
   align-items: center;
-  align-items: baseline;
- 
+  margin-left: auto;
 }
 
-.contacts-list-item{
-margin-right: 50px;
+.contacts-list-item {
+  margin-right: 50px;
 }
+.site-nav> .link-current{
+color: var(--accent-color);
+}
+  
 /* .contacts-list:not(:last-child) {
   margin-right: 50px;
 } */
 
 /* Portfolio */
-.list-btn-filtr{
-    display: flex;
-    justify-content: center;
+.list-btn-filtr {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 50px;
 }
 .button {
   color: var(--primary-text-color);
@@ -353,8 +375,8 @@ margin-right: 50px;
   border: 1px solid transparent;
   padding: 6px 22px;
   margin-right: 8px;
+  background-color: #F5F4FA;;
 }
-
 
 .button:hover,
 .button:focus {
@@ -368,7 +390,6 @@ margin-right: 50px;
   font-size: 18px;
   line-height: 2;
   letter-spacing: 0.06em;
-  margin-top: 20px;
   margin-bottom: 4px;
 }
 .product-type {
@@ -376,25 +397,22 @@ margin-right: 50px;
   line-height: 1.88;
 }
 
-.container-product{
-    margin-top: 50px;
-}
+
 .menu-product {
-    display: flex;
-    flex-wrap: wrap;
-    margin-left: -30px;
-    margin-top: -30px;
+  display: flex;
+  flex-wrap: wrap;
+  margin-left: -30px;
+  margin-bottom: -30px;
 }
 
 .product-card {
-padding: 20px 24px;
-border-left: 1px solid #EEEEEE;
-border-right: 1px solid #EEEEEE; 
-border-bottom: 1px solid #EEEEEE;
-width: 370px;     
+  padding: 20px 24px;
+  border-left: 1px solid #eeeeee;
+  border-right: 1px solid #eeeeee;
+  border-bottom: 1px solid #eeeeee;
 }
-.menu-product> .item-card{
-margin-left: 30px;
-margin-bottom: 30px;
-flex-basis: calc(100% / 3 - 30px);
+.menu-product > .item-card {
+  margin-left: 30px;
+  margin-bottom: 30px;
+  flex-basis: calc(100% / 3 - 30px);
 }
