--- a/css/styles.css
+++ b/css/styles.css
@@ -137,12 +137,18 @@ body {
 }
 
 /* Hero */
-.hero {
+  .hero {
   background-color: #2f303a;
   margin: 0 auto;
   padding-top: 200px;
   padding-bottom: 200px;
-}
+  height: 600px;
+  background-image: linear-gradient( to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), 
+  url('../images/hero/hero.jpg');
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  }
 
 .hero-title {
   color: var(--primary-white-color);
