--- a/css/styles.css
+++ b/css/styles.css
@@ -258,7 +258,7 @@ justify-content: center;
   color: #ffffff;
 }
 
-.icon-instagram, .icon-twitter, .icon-facebook, .icon-linkedin{
+.icon-social-link{
 width: 20px;
 height: 20px;
 fill: currentColor;
@@ -401,6 +401,42 @@ fill: currentColor;
   margin: 0 auto;
   padding-left: 15px;
   padding-right: 15px;
+  display: flex;
+  align-items: baseline;
+}
+
+.container-footer-adress{
+  margin-right: 70px;
+}
+
+.footer-appeal{
+font-weight: 700;
+font-size: 14px;
+line-height: 1.14;
+text-transform: uppercase;
+color: var(--primary-white-color);
+margin-bottom: 20px;
+}
+.footer-social-list{
+  display: flex;
+}
+.footer-social-items:not(:last-child){
+  margin-right: 10px;
+}
+
+.footer-social-link{
+display: flex;
+justify-content: center;
+align-items: center;
+width: 44px;
+height: 44px;
+color: #FFFFFF;
+background-color: #FFFFFF10;
+border-radius: 50%;
+}
+
+.footer-social-link:hover{
+  background-color: var(--accent-color);
 }
 /* ======HEADER============= */
 .header {
